--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,9 @@ dependencies:
   firebase_messaging: ^7.0.3
   firebase_auth: ^0.18.1+2
   cloud_firestore: ^0.14.1+3
-  package_info: ^0.4.0+6
   url_launcher: ^5.4.2
-  shimmer: ^1.1.2
+  flutter_html: 0.11.0
+  flutter_wordpress: 0.1.4
 
 
 
