--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   url_launcher: ^5.4.2
   flutter_html: 0.11.0
   flutter_wordpress: 0.1.4
+  line_awesome_flutter: 1.0.1
+  gradient_app_bar: ^0.0.1
+  rflutter_alert: ^1.1.0
 
 
 
