--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,13 @@ dependencies:
   firebase_messaging: ^7.0.3
   firebase_auth: ^0.18.1+2
   cloud_firestore: ^0.14.1+3
-  url_launcher: ^5.4.2
   flutter_html: 0.11.0
   flutter_wordpress: 0.1.4
   line_awesome_flutter: 1.0.1
   gradient_app_bar: ^0.0.1
   rflutter_alert: ^1.1.0
+  url_launcher: ^5.7.10
+  splashscreen: ^1.3.5
 
 
 
@@ -58,6 +59,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/pzn_wiesloch_zentralgebaeude.jpg
+    - assets/zfp_logo.jpg
+    - assets/PZN_Logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
