--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   rflutter_alert: ^1.1.0
   url_launcher: ^5.7.10
   splashscreen: ^1.3.5
+  auto_size_text: ^2.1.0
 
 
 
@@ -61,6 +62,7 @@ flutter:
     - assets/pzn_wiesloch_zentralgebaeude.jpg
     - assets/zfp_logo.jpg
     - assets/PZN_Logo.png
+    - assets/lageplan.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
